# pandemic

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  LINTING.md  Makefile  README.md  pyproject.toml  workspace.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
docs/: README.md  REQUIREMENTS.md  SOURCES.md
docs/features/: README.md  bootstrap-command.md  event-bus-api.md  event-bus-examples.md  event-bus-plugin-refactor.md  event-bus.md  pandemic-console.md  pandemic-iam.md  pandemic-rest.md  privileged-systemd-helper.md  template.md
examples/test-infection/: infection.yaml
